Refactor WebServer and Constants: remove unused routes and messages, streamline plugin messaging with Constants